[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/scenes/librairies/ingredients/fertile_soil.gd" type="Script" id=1]
[ext_resource path="res://assets/tiles/roots_tile_sheet_export_no_gap.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[node name="FertileSoil" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 448, 384, 64, 64 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 24 )
shape = SubResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = -30.0
margin_top = -10.0
margin_right = 30.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 30, 10 )
text = "SPAWN"

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
